--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,14 @@
     color: #0059ff;
 }
 
+.green {
+    color: #00ff00;
+}
+
+.red{
+    color: #ff0000;
+}
+
 button {
     margin: 0 10px;
     background-color: #192a56;
