--- a/src/index.css
+++ b/src/index.css
@@ -4,22 +4,33 @@
     box-sizing: border-box;
     font-family: 'Baloo Chettan 2', cursive;
 }
+
 #root {
     background: #192a56;
-    min-height: 70vh;
 }
-.stopwatch-block {
-    margin-top: 2%;
+
+.stopwatch {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
 .intro {
     text-align: center;
+    margin: 1rem 0rem;
 }
-/* Utilities */
-.mt {margin-top: 5%;}
-.mt-1 {margin-top: 7%}
-/* .mt-2 {margin-top: 10%} */
-.mt-4 {margin-top: 10%}
-.mt-6 {margin-top: 20%}
+
+.split-time{
+    font-size: 20px;
+    color: #192a56;
+    background-color: aliceblue;
+    font-weight: bold;
+    padding: .5rem;
+    margin: 0rem .5rem;
+}
+
 .lg-text {
     font-size: 120px;
     color: aliceblue;
@@ -29,10 +40,12 @@
     font-size: 50px;
     color: aliceblue;
 }
-.buttons {
-    margin-left: 41%;
-}
 
+.buttons{
+    display: flex;
+    justify-content: center;
+}
+ 
 .buttons > button:hover {
     transform: scale(1.08);
 }
@@ -75,10 +88,17 @@ footer p, a {
     font-size: 22px;
 }
 footer {
-    margin-left: 43%;
+   text-align: center;
 }
 
-@media screen and (max-width: 576px) {
+
+/* Utilities */
+/* .mt {margin-top: 5%;}
+.mt-1 {margin-top: 7%}
+.mt-4 {margin-top: 10%}
+.mt-6 {margin-top: 20%} */
+
+/* @media screen and (max-width: 576px) {
     .lg-text {
         font-size: 63px;
     }
@@ -108,4 +128,4 @@ footer {
     footer p, a {
         font-size: 18px;
     }
-}
+} */
